# tree-document-data-generator

./: Cargo.toml
src/: generate_relation.rs  lib.rs  sparql_converter.rs  tests.rs
src/generator_argument/: mod.rs  random_bounded_range.rs  range.rs  relation_argument.rs
src/tree/: member.rs  mod.rs  node.rs  relation.rs  relation_operator.rs  shacl_path.rs  value.rs
