[package]
name = "tree-document-data-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version= "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
rand = "0.8.5"
num = "0.4.0"
derive-new = "0.5.9"
derive-getters = "0.2.0"